# PlayGround

./: .aider.chat.history.md  .aider.input.history  .gitignore  .gitmodules  Validations.java  beagle.bgjs  binary.hs  bits.hs  brandon_math.hs  bryant.clj  bubbles.clj  chrome.applescript  claude.md  cloud-int.clj  cloud-str.clj  criticalhits.txt  datalog.clj  demsem.hs  deque.hs  distributed.exs  eslint.py  euler.clj  euler.hs  expound.js  family.hs  familylogic.hs  fizzbuzz.clj  flock.elm  flock2.elm  fsm-transformations.clj  get-crits.clj  heap.hs  instarest.py  james.clj  learning.hs  logic.clj  logic.hs  machine.clj  machine.hs  machine2.hs  (+19 more)
age/: .gitignore  ATTRIBUTION.md  Cargo.toml  DESIGN.md  README.md
age/src/: achievements.rs  main.rs  util.rs
auto-structures/: Cargo.toml  README.md
auto-structures/examples/: bench.shape  bfs.shape  dedup.shape  ordered_set.shape  stack.shape  word_count.shape
auto-structures/src/: analysis.rs  ast.rs  codegen_js.rs  interp.rs  lexer.rs  main.rs  parser.rs  value.rs
auto-structures/tests/: cli.rs
axiom-reload/: Cargo.toml
axiom-reload/src/: main.rs  poll.rs
bookshelf-cloud/publish/: pyproject.toml
claude-experiments/3d-cube/: Cargo.toml
claude-experiments/ai-lang/: .dockerignore  .gitignore  Cargo.toml  package-lock.json  package.json
claude-experiments/ailang-vercel-probe/: .gitignore  Cargo.toml
claude-experiments/bevy-whiteboard/: ARCHITECTURE.md  Cargo.toml  VISION.md  bad_run.txt  execution  log.txt
claude-experiments/bug-tracker/: BUGS.md  Cargo.toml  README.md  claude.md
claude-experiments/c-mlir-wrapper/: .gitignore  BUILD_INSTRUCTIONS.md  CAPABILITIES.md  CMakeLists.txt  INTEGRATION.md  QUICK_START.md  README.md  START_HERE.md  TESTED.md  USAGE_GUIDE.md  conversation.txt
claude-experiments/claude-auth/: Cargo.toml  README.md  usage_guide.md
claude-experiments/code-notes/: .gitignore  ARCHITECTURE.md  BUGS.md  Cargo.toml  GRAPH_VIEW_FEATURE.md  METADATA.md  METADATA_IMPLEMENTATION.md  README.md  TOUR_IMPLEMENTATION.md  TOUR_METADATA.md  claude.md
claude-experiments/constrained-language/: Cargo.toml  GOALS.md  RL_SCENARIO.md
claude-experiments/controllable-futures/: Cargo.toml  README.md  rust-toolchain.toml
claude-experiments/datalog-db/: .gitignore  Cargo.toml  trial.sh
claude-experiments/diff/: .gitignore  Cargo.toml  README.md
claude-experiments/editor-idea/: .gitignore  CLAUDE.md  Cargo.toml  GLAZE.md  GLAZE_CHALLENGES.md  demo.sh  dev-restart.sh  glaze-explainer.html  make-bundle.sh  pbcopy  rust-toolchain.toml  setup-signing.sh
claude-experiments/editor-idea-experiments/: Cargo.toml
claude-experiments/flame-graph/: Cargo.toml  README.md
claude-experiments/funct/: .gitignore  Cargo.toml  README.md
claude-experiments/gc-library/: Cargo.toml
coil/: .gitignore  AGENTS.md  Cargo.toml  README.md  coil  coil-nollvm
coil-mlir/: Cargo.toml  README.md
coil-mlir/examples/: add.coil
coil-mlir/src/: backend.rs  emit.rs  expand.rs  lib.rs  printer.rs
coil-mlir/tests/: emit.rs  expand.rs  reader.rs
coil/bench/: COMPILE_COMPARE.md  COMPILE_SCALE.md  README.md  RESULTS.md  compile_compare.sh  compile_scale.sh  fib.c  fib.coil  fib.zig  float.c  float.coil  float.zig  genreduce.coil  genreduce.zig  loop.c  loop.coil  loop.zig  memory.c  memory.coil  memory.zig  run.sh  slicesum.c  slicesum.coil  slicesum.zig  structcall.c  structcall.coil  structcall.zig  tak.c  tak.coil  tak.zig
coil/docs/: ARM64_BACKEND.md  AUTOFIX.md  BOOTSTRAP.md  BUG_CALLPTR_C_ABI.md  CINTEROP_DOGFOOD.md  CINTEROP_PHASE2_SCOPE.md  CINTEROP_SCOPE.md  COMPTIME.md  COMPTIME_REFLECTION_DESIGN.md  CONCURRENCY_DOGFOOD.md  CONCURRENCY_SCOPE.md  DEBUGINFO_DWARF.md  DECISIONS.md  DESIGN.md  DOGFOOD2_FRICTION.md  DOGFOOD3_FRICTION.md  DOGFOOD4_FRICTION.md  DOGFOOD_FRICTION.md  DOGFOOD_LISP.md  FREESTANDING_SCOPE.md  FUTURE_WORK.md  INTERP_DELETION.md  LANGUAGE_GUIDE.md  LAYOUT.md  LINUX_PORT.md  METAPROGRAMS.md  NAMESPACING.md  PHASE2_DESIGNS.md  ROUGH_EDGES.md  SEMANTIC_METAPROGRAMS.md  STAGE3_ELABORATION.md  SYMBOL_EXPORT.md  TRAITS_DESIGN.md
coil/emacs/: coil-mode.el
coil/examples/: allocation.coil  allocators.coil  args.coil  arraylist.coil  bitfields.coil  calc.coil  chip8.coil  cinterop.coil  closure-lib.coil  closure.coil  control.coil  defclosure.coil  defer.coil  dyn_write.coil  everything.coil  explicit-layout.coil  extern.coil  fib.coil  fmt.coil  generics.coil  hashmap.coil  inference.coil  io.coil  iter.coil  json.coil  layout.coil  lisp.coil  lockfree.coil  loops.coil  macros.coil  mem.coil  nl.coil  per-arch.coil  references.coil  shim.coil  simd.coil  slice.coil  structabi.coil  structs.coil  sums.coil  (+4 more)
coil/fmt/: README.md  check.sh  cst.coil  doc.coil  dump.coil  fmt.coil  rules.coil  sample.coil
coil/freestanding/: README.md  arena.coil  hello.coil  run.sh  start.s  uart.coil  virt.ld
coil/gc-dialect-poc/: README.md  arena.coil  demo.coil  gc.coil  gcdemo.coil  gcgen-demo.coil  gcgen.coil  gctree.coil  unified.coil
coil/lib/: alloc.coil  arraylist.coil  assert.coil  atomic.coil  chip8.coil  closure.coil  control.coil  dbgalloc.coil  derive.coil  dyn.coil  fmt.coil  fs.coil  hashmap.coil  io.coil  match.coil  mem.coil  mmio.coil  objc.coil  print.coil  result.coil  sexp.coil  simd.coil  slice.coil  stacklint.coil  str.coil  thread.coil  traits.coil  try.coil
coil/metaprog-poc/: README.md  always.coil  always_test.coil  arity.coil  arity_bad.coil  arity_cross.coil  arity_ok.coil  bad.coil  checker.coil  clean_prog.coil  dialect.coil  dialect_bad.coil  dialect_ok.coil  dup_app.coil  dupa.coil  dupb.coil  imports_test.coil  lint-on.coil  lint.coil  lint_test.coil  located.coil  (+31 more)
compile2js/: compile2js.cabal  stack.yaml
dataless/: Cargo.toml  README.md
gatekeeper/: Cargo.toml  README.md  gatekeeper.example.toml
hot-reload/: .gitignore  Cargo.toml  DESIGN.md  LANGUAGE.md  RUNTIME_DESIGN.md  UNIFICATION.md  livetype-lab.html  livetype_engine.mjs  livetype_poc.py
microlang/: Cargo.toml  README.md
minimal-optchain/: Cargo.toml
typed-github-bots/: .gitignore  typed-github-bots.cabal
(+56481 files in other folders)
