[package]
name = "auto-structures"
version = "0.1.0"
edition = "2021"
description = "A little language with no declared data types: the compiler infers the best concrete data structure for each collection from how you use it."

[[bin]]
name = "autostruct"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
