[package]
name = "coil"
version = "0.0.0"
edition = "2021"
description = "Low-level Lisp where calling convention and allocation are types. M0/M1 skeleton."

[dependencies]
inkwell = { version = "0.5", features = ["llvm18-0"] }
serde_json = "1"   # parse clang's `-ast-dump=json` output for `coil cimport`

[[bin]]
name = "coil"
path = "src/main.rs"
