[workspace]
members = [
    "crates/gatekeeper-abi",
    "crates/gatekeeper-fn",
    "crates/gatekeeper-fn-macro",
    "funcs/hello",
    "funcs/analytics",
    "funcs/polls",
    "funcs/nodescribe",
]

[package]
name = "gatekeeper"
version = "0.1.0"
edition = "2021"

[dependencies]
tiny_http = { version = "0.12", features = ["ssl-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
subtle = "2"
percent-encoding = "2"
signal-hook = "0.4.4"
libloading = "0.8"
gatekeeper-abi = { path = "crates/gatekeeper-abi" }

[dev-dependencies]
proptest = "1.11.0"
