[package]
name = "microlang"
version = "0.0.1"
edition = "2021"
description = "Trait sketch for a dynamic-language toolkit re-cut at the value-model and eval axes, plus three micro-languages that exercise it."

[lib]
path = "src/lib.rs"

# Detach from the big parent workspace; `microlang` is the reusable CORE, and
# the frontends (`scheme`, `clojure-stub`) are members that may only use its
# public API. The live second consumer keeps the library/language split honest.
[workspace]
members = ["scheme", "clojure-stub"]
