name:                typed-github-bots
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/typed-github-bots#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Dice
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , random
                     , MonadRandom
  default-language:    Haskell2010

executable typed-github-bots-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , typed-github-bots
                     , github
                     , base64-bytestring
                     , bytestring
                     , text
                     , base64-string
                     , yaml
                     , dice
                     , regex-compat
                     , data-default
                     , vector
                     , MonadRandom
                     , mtl
                     , either
                     , errors
                     , transformers
  default-language:    Haskell2010

test-suite typed-github-bots-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , typed-github-bots
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/typed-github-bots
