[project]
name = "bookshelf-cloud"
version = "0.1.0"
description = "Publish m4b audiobooks to a bookshelf-cloud S3 bucket"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35",
    "click>=8.1",
]

[project.scripts]
bookshelf-cloud = "bookshelf_cloud.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bookshelf_cloud"]
