[workspace]
resolver = "3"
members = [
    "crates/bevy-whiteboard",
    "crates/flow",
    "crates/flow-bevy",
    "crates/poster-ui",
]

# Speed up native-dep compile times in dev builds while keeping fast
# iteration on our own crates.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
