[package]
name = "bug-tracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bug-tracker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
goofy-animals = "0.1"
regex = "1.11"
rand = "0.9"
shell-escape = "0.1"
