[package]
name = "code-notes"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Tree-sitter for parsing
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"

# Git integration
git2 = "0.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system utilities
walkdir = "2.5"

# UUID for note IDs
uuid = { version = "1.10", features = ["v4", "serde"] }
