[workspace]
resolver = "2"
members = [
    "crates/ir",
    "crates/runtime",
    "crates/inspector",
    "crates/host-adapters",
    "crates/agent-demo",
    "crates/cl-run",
]
exclude = [
    "wasm-samples/counter",
    "wasm-samples/bumper",
    "wasm-samples/say_hello",
    "wasm-samples/agent_loop/start_goal",
    "wasm-samples/agent_loop/on_llm_returned",
    "wasm-samples/agent_loop/on_tool_returned",
    "wasm-samples/agent_loop/on_user_message",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
