[package]
name = "datalog-db"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocksdb = "0.22"
bytes = "1"
byteorder = "1"
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "datalog-cli"
path = "src/bin/cli.rs"

[features]
default = []
tikv = ["tikv-client", "tokio"]

[dev-dependencies]
tempfile = "3.25.0"
insta = "1"
proptest = "1"

[dependencies.tikv-client]
version = "0.3"
optional = true

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true
