[package]
name = "datalog-db"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
rocksdb = "0.22"
bytes = "1"
byteorder = "1"
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

# --- SCRAM-SHA-256 auth (always on) ---
# Hand-rolled SCRAM (RFC 5802 / 7677) assembled over the audited RustCrypto
# primitives — small, no heavyweight SCRAM framework, fully under our control and
# unit-testable against the RFC vectors. `subtle` gives a constant-time compare
# for the security-critical client-proof check.
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
base64 = "0.22"
subtle = "2"
getrandom = "0.2"

# --- TLS transport (rustls, ring backend) ---
# The `ring` provider avoids the aws-lc-rs C toolchain on this box. Non-optional:
# the transport layer always offers both plaintext and TLS streams, and the
# server/CLI binaries always want TLS available. The crypto provider is only
# initialized when TLS is actually used, so plaintext deployments pay nothing.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
# Turn a pinned self-signed server cert into a webpki trust anchor so the
# standard verifier (signature + expiry + hostname) applies to it — instead of
# a raw DER-equality pin that would skip expiry/hostname checks.
rustls-webpki = { version = "0.103", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1"

[[bin]]
name = "datalog"
path = "src/bin/cli.rs"

[[bin]]
name = "datalog-embed"
path = "src/bin/embed.rs"
required-features = ["embed"]

[features]
default = []
tikv = ["tikv-client", "tokio"]
# Pure-Rust text embeddings via candle (BERT / bge-small). CPU backend —
# there is no production ROCm path for candle on this hardware, so CPU is the
# correct engineering choice here, not a silent fallback. Kept behind a feature
# so the core DB stays dependency-light.
embed = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub", "anyhow"]

[dev-dependencies]
tempfile = "3.25.0"
insta = "1"
proptest = "1"
postgres = "0.19"
# Generate self-signed certs for the TLS integration tests (test-only).
rcgen = "0.13"

[[bench]]
name = "comparative"
harness = false

[dependencies.tikv-client]
version = "0.3"
optional = true

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true

# --- Embedding (feature = "embed") ---
[dependencies.candle-core]
version = "0.9"
optional = true

[dependencies.candle-nn]
version = "0.9"
optional = true

[dependencies.candle-transformers]
version = "0.9"
optional = true

[dependencies.tokenizers]
version = "0.21"
optional = true
default-features = false
features = ["onig"]

[dependencies.hf-hub]
version = "0.4"
optional = true

[dependencies.anyhow]
version = "1"
optional = true
