[package]
name = "diffpack"
version = "0.1.0"
edition = "2024"
description = "An experimental incremental JavaScript bundler built with Oxc"
license = "MIT"

[features]
# Compiles in the deterministic allocation-accounting layer (a tracking global
# allocator) used ONLY by `bundle-scale-memory` and the memory thesis guards.
# Production/default builds have NO allocator override: plain system malloc.
memory-accounting = []

[dependencies]
oxc_allocator = "0.140.0"
oxc_ast = "0.140.0"
oxc_ast_visit = "0.140.0"
oxc_codegen = "0.140.0"
oxc_ecmascript = "0.140.0"
oxc_parser = "0.140.0"
oxc_resolver = "11.24.2"
oxc_semantic = "0.140.0"
oxc_sourcemap = "8.1.1"
oxc_span = "0.140.0"
oxc_syntax = "0.140.0"
oxc_transformer = "0.140.0"
serde_json = "1.0.150"
notify = "8.2.0"
rayon = "1.11.0"
oxc_minifier = "0.140.0"

[dev-dependencies]
tempfile = "3.23.0"
