[workspace]
resolver = "2"
members = ["crates/editor-core", "crates/editor-bevy", "crates/pane-bevy", "crates/terminal-bevy", "crates/book-ui-experiment", "crates/book-ui-wgpu"]

# Use a locally-patched libghostty-rs whose build.rs invokes
# `zig build -Doptimize=ReleaseFast`. Upstream defaults to Debug,
# which makes vt_write 100×+ slower than it should be.
[patch.crates-io]
libghostty-vt = { path = "../libghostty-rs-vendored/crates/libghostty-vt" }
libghostty-vt-sys = { path = "../libghostty-rs-vendored/crates/libghostty-vt-sys" }
